# ros2_modular_node_template

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh
docs/: README.md  api_documentation.md  architecture.md
docs/diagrams/: class_diagram.puml  lifecycle_diagram.puml  state_machine.puml
template_node/: CMakeLists.txt  package.xml
template_node/config/: default_params.yaml  state_machine_config.yaml
template_node/include/template_node/algorithms/: example_algorithm.hpp
template_node/include/template_node/core/: algorithm_interface.hpp  data_types.hpp  state_machine.hpp
template_node/include/template_node/middleware/: lifecycle_node_wrapper.hpp  parameter_handler.hpp  ros_interfaces.hpp
template_node/launch/: template_node.launch.py  template_node_composed.launch.py
template_node/scripts/: build_and_run.sh
template_node/src/: main.cpp
template_node/src/algorithms/: example_algorithm.cpp
template_node/src/core/: state_machine.cpp
template_node/src/middleware/: lifecycle_node_wrapper.cpp  parameter_handler.cpp  ros_interfaces.cpp
template_node/test/: CMakeLists.txt
template_node/test/integration/: test_lifecycle_transitions.cpp  test_ros_interfaces.cpp
template_node/test/unit/: test_algorithm.cpp  test_parameter_handler.cpp  test_state_machine.cpp
